Číselník užívateľov MD
- php časť zoznamu užívateľov
- jeden súbor je gitignore ten je na edcom.sk

TODO
- popis buttonu predch a nasl strana sa v IE 11 stráca

--- a/f/index.html
+++ b/f/index.html
@@ -257,8 +257,8 @@ limitations under the License.
             </button>
             <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn1">
               <li class="mdl-menu__item">Ciselnik firiem</li>
-              <li class="mdl-menu__item" disabled>Ciselnik uzivatelov</li>
-              <li class="mdl-menu__item">Dalsi ciselnik</li>
+              <li class="mdl-menu__item" id="users" name="users">Ciselnik uzivatelov</li>
+              <li class="mdl-menu__item" disabled>Dalsi ciselnik</li>
             </ul>
         </div>
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
