--- a/f/index.html
+++ b/f/index.html
@@ -256,7 +256,7 @@ limitations under the License.
               <i class="material-icons">more_vert</i>
             </button>
             <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn1">
-              <li class="mdl-menu__item">Ciselnik firiem</li>
+              <li class="mdl-menu__item" id="firms" name="firms">Ciselnik firiem</li>
               <li class="mdl-menu__item" id="users" name="users">Ciselnik uzivatelov</li>
               <li class="mdl-menu__item" disabled>Dalsi ciselnik</li>
             </ul>
